commit after being sick

--- a/guess_a_number/guess_a_number.html
+++ b/guess_a_number/guess_a_number.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excersise 1</title>
-    <link rel="stylesheet" href="ex1.css">
+    <link rel="stylesheet" href="guess_a_number.css">
 </head>
 <body>
     <main>
@@ -21,4 +21,4 @@
 </body>
 </html>
 
-<script type = module src="ex1.js"></script>
+<script type = module src="guess_a_number.js"></script>
