--- a/areal/areal.html
+++ b/areal/areal.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momsberegner</title>
-    <link rel="stylesheet" href="../styling.css">
+    <title>Areal</title>
 </head>
 <body>
-    <main>
-        <h1>Momsberegner</h1>
-    </main>
     
 </body>
-<script type = "module" src="moms.js"></script>
+<script src="areal.js"></script>
 </html>
