--- a/class_exercises/class_exercises.html
+++ b/class_exercises/class_exercises.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momsberegner</title>
+    <title>Class Exercises</title>
     <link rel="stylesheet" href="../styling.css">
 </head>
 <body>
-    <main>
-        <h1>Momsberegner</h1>
-    </main>
-    
+    <h1>Class Exercises</h1>
 </body>
-<script type = "module" src="moms.js"></script>
+<script src="class_exercises.js"></script>
 </html>
